Fixes for content boxes being too wide. The HTML box model is evil.

--- a/omf/static/models.css
+++ b/omf/static/models.css
@@ -28,7 +28,7 @@ div#input {
 	margin-top: 0px;
 }
 div.content {
-	width: 1000px;
+	width: 980px;
 }
 div.shortInput {
 	width: 330px; 
